--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,25 @@ dependencies {
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.volley:volley:1.2.1'
+
+    /*implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
+    implementation 'com.edmodo:cropper:1.0.1'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.theartofdev.edmodo:android-image-cropper:2.8.0"*/
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // Cette bibliothèque est utilisée pour la fonction de recadrage d’image
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+
+    // Cette bibliothèque est utilisée pour charger le
+
+    // image recadrée dans ImageView.
 }
