--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         tools:ignore="GradleOverrides" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name= "android.permission.READ_EXTERNAL_STORAGE " />
+    <uses-permission android:name= "android.permission.WRITE_EXTERNAL_STORAGE" />
+<!--    <uses-permission android:name= "android.permission.CAMERA"/>-->
 
     <meta-data
         android:name="com.google.android.gms.vision.DEPENDENCIES"
@@ -29,6 +32,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CarsControls"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name="com.example.carscontrols.activity.CobayeActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.example.carscontrols.activity.HistoryActivity"
+            android:exported="false" />
         <activity
             android:name="com.example.carscontrols.activity.SettingsActivity"
             android:exported="false" />
@@ -61,6 +70,12 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
+        <!--<activity android:name="com.canhub.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/> &lt;!&ndash; optional (needed if default theme has no action bar) &ndash;&gt;-->
+
+        <activity
+            android:name = "com.theartofdev.edmodo.cropper.CropImageActivity"
+        android:theme= "@style/Base.Theme.AppCompat" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
