--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,8 @@
         tools:ignore="GradleOverrides" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name= "android.permission.READ_EXTERNAL_STORAGE " />
-    <uses-permission android:name= "android.permission.WRITE_EXTERNAL_STORAGE" />
-<!--    <uses-permission android:name= "android.permission.CAMERA"/>-->
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE " />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- <uses-permission android:name= "android.permission.CAMERA"/> -->
     <meta-data
         android:name="com.google.android.gms.vision.DEPENDENCIES"
         android:value="ocr" />
@@ -32,6 +30,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CarsControls"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name="com.example.carscontrols.admin_activity.AdminProfileActivity"
+            android:exported="false" />
+        <!--
+        <activity
+            android:name="com.example.carscontrols.AdminActivity"
+            android:exported="false" />
+        -->
         <activity
             android:name="com.example.carscontrols.activity.CobayeActivity"
             android:exported="false" />
@@ -66,16 +72,21 @@
             android:label="@string/app_name"
             android:launchMode="singleTop" />
         <activity
+            android:name="com.example.carscontrols.AdminActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop" />
+        <activity
             android:name="com.example.carscontrols.activity.TestActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
-        <!--<activity android:name="com.canhub.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/> &lt;!&ndash; optional (needed if default theme has no action bar) &ndash;&gt;-->
-
+        <!--
+<activity android:name="com.canhub.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/> &lt;!&ndash; optional (needed if default theme has no action bar) &ndash;&gt;
+        -->
         <activity
-            android:name = "com.theartofdev.edmodo.cropper.CropImageActivity"
-        android:theme= "@style/Base.Theme.AppCompat" />
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
